# PH_Materials

./: .gitignore  .sesskey  Dockerfile  Material Data-Grid view.csv  Procfile  README.md  alembic.ini  docker-compose.yaml  main.py  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  railway.json  requirements.txt  runtime.txt  tailwind.config.js
.github/workflows/: tests.yaml
PH_Materials/: asgi.py  settings.py  urls.py  wsgi.py
_sources/: _materials.csv  _materials_from_AT - WORKS.csv  _materials_from_AT.csv  materials_from_AT - BROKEN.csv  ph_materials - TESTING WORKS.csv
alembic/: README  env.py
alembic/versions/: 0208cfb29072_update_all_types.py  bf2ef41ff5db_update_types.py
src/model/: material.py
src/routes/: table.py
src/schemas/: base.py  material.py
src/static/: edit_material.css  scripts.js  table.css
src/views/: material_details.py  menu.py  table.py
static/css/: select2.css  styles.css  tailwind.css
staticfiles/css/: styles.css
tests/: conftest.py  test_models.py  test_views.py
tests/test_model/: test_material.py
webportal/: admin.py  apps.py  factories.py  filters.py  forms.py  models.py  resources.py  signals.py  urls.py  views.py
webportal/migrations/: 0001_initial.py  0002_customgroup_user_group.py  0002_materialcategory_alter_material_options_and_more.py  0002_materialcategory_material_color_argb_and_more.py  0002_remove_assembly_user_assembly_created_by_and_more.py  0003_alter_material_category_alter_material_unique_id.py  0003_alter_material_options_and_more.py  0003_rename_customgroup_team.py  (+18 more)
(+51 files in other folders)
